--- a/myapp/templates/about.html
+++ b/myapp/templates/about.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Navbar</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
-
 </head>
 <body>
 
@@ -21,8 +20,9 @@
     </nav>
 
 <div class="content">
-    <h1>Todos</h1>
-    <p>This is a simple example of a navbar using HTML and CSS.</p>
+    <h1>Ofek Dinisman</h1>
+    <p>This is a django first project created from scratch</p>
+    <p>for more info feel free to reach me on <strong><a href="https://www.linkedin.com/in/ofekdinisman" target="_blank">Linkedin</a></strong></p>
 </div>
 
 </body>
